--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, I'm Nathan</title>
+    <title>Nathan - (adjective: nerdy)</title>
   </head>
   <body>
+    <h1>Hello, I'm Nathan</h1>
     <h1>I am a nerd enthusiastic Portlander</h1>
-    <h2>And I love fishing</h2>
+      <img src="img/GloandI.jpg" alt="Photo of Gloria and I.">
+    <h5>and I love fishing</h5>
+      <img src="img/Jack.jpg" alt="Photo of Pepper jack">
   </body>
