Add content to page, edit headers

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   </head>
   <body>
     <h1>Hello, I'm Nathan</h1>
-    <h1>I am a nerd enthusiastic Portlander</h1>
       <img src="img/GloandI.jpg" alt="Photo of Gloria and I.">
-    <h5>and I love fishing</h5>
-      <img src="img/Jack.jpg" alt="Photo of Pepper jack"
+    <h5>-My wife Gloria and I, fishing on the Deschutes River</h5>
+    <h2>About me:</h2>
+      <p>My post-high school education has meandered a bit. I started at Portland Community College, transfer to Western Oregon University, deciding against a business degree, I came back to Portland and went to Portland State University. I had always wanted to be an architect and spent two years trying to fight my way through the program at PSU. Admitting defeat, I transferred to PCC and obtained a general Associates Degree. </p>
+      <p>Not knowing what to make of myself, I found Epicodus. A lightbulb went off: <strong>coding</strong>.</p>
+      <p>I had a preexisting love for working on computers. Since building 386's from scavenged parts in my parent's garage, but was logistically unable to return to college. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.</p>
+      <img src="img/Jack.jpg" alt="Photo of Pepper jack">
   </body>
