--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Hello, I'm Nathan</h1>
-      <img src="img/GloandI.jpg" alt="Photo of Gloria and I.">
+      <img src="img\GloandI.JPG" alt="Photo of Gloria and I.">
     <h5>-My wife Gloria and I, fishing on the Deschutes River</h5>
     <h2>My background</h2>
       <p>My post-high school education has meandered a bit. I started at Portland Community College, transfer to Western Oregon University, deciding against a business degree, I came back to Portland and went to Portland State University. I had always wanted to be an architect and spent two years trying to fight my way through the program at PSU. Admitting defeat, I transferred to PCC and obtained a general Associates Degree. </p>
