Correct photo path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>My work history has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path which can fulfill my desire for creativity.</p>
     <h2>Hobbies</h2>
       <ul>
-        <li>Relaxing with my wife, my dogs <img src="img/Jack.jpg" alt="Photo of Pepper jack">, and my Netflix</li>
+        <li>Relaxing with my wife, my dogs <img src="img\AbbJack.JPG" alt="Photo of Abby and Jack">, and my Netflix</li>
         <li>Fishing, camping, and generally enjoying the great outdoors</li>
         <li>Fututre addition: Computer programming</li>
       </ul>
