set font, color title, align links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>Fututre addition: Computer programming</li>
       </ul>
     <h2>Top websites</h2>
-      <ul>
+      <ul class="links" style="list-style-type:none">
         <li>
           <a href="http://www.sbs.com.au/theboat/">
             <h4>The Boat</h4>
@@ -41,4 +41,7 @@
          </a>
         </li>
       </ul>
+
+
+
   </body>
