--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Hello, I'm Nathan</h1>
       <IMG class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
     <h5>-My wife Gloria and I, fishing on the Deschutes River-</h5>
-    <h2>My background</h2>
+    <h2>My Background</h2>
       <p>
         My post-high school education has meandered a bit. I started at Portland Community College, transfer to Western Oregon University, deciding against a business degree, I came back to Portland and went to Portland State University. I had always wanted to be an architect and spent two years trying to fight my way through the program at PSU. Admitting defeat, I transferred to PCC and obtained a general Associates Degree.
           <br>
@@ -27,7 +27,7 @@
         <li>Fishing, camping, and generally enjoying the great outdoors</li>
         <li>Future addition: Computer programming</li>
       </ul>
-    <h2>Top websites</h2>
+    <h2>Top Websites</h2>
       <ul class="links" style="list-style-type:none">
         <li>
           <a href="http://www.sbs.com.au/theboat/">
