Clean css order

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hello, I'm Nathan</h1>
-      <IMG class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
+      <img class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
     <h5>-My wife Gloria and I, fishing on the Deschutes River-</h5>
     <h2>My Background</h2>
       <p>
@@ -18,7 +18,7 @@
       <p>
         I had a preexisting love for working on computers. I remember building 386's from scavenged parts in my parent's garage as a kid, and I'm often fixing (sometimes further breaking) my friend's computers. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.
       </p>
-      <p>  
+      <p>
         My work history has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, a file clerk, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path that can fulfill my desire for creativity.
       </p>
     <h2>Hobbies</h2>
