Add content to cv, link from about

--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,15 @@
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Nathan's CV</title>
+  </head>
   <body>
+    <h1>OBJECTIVE</h1>
+      <p>Seeking an outlet to benefit others by applying my skills and ambition.</p>
+    <h1>STRENGTHS</h1>
+      <ul>
+        <li>Office Functions - Processing correspondence through calls, mail, and email. Calendaring, copying, faxing, filing, entering time and expenses, documant and material delivery.</li>
+        <li>Organization - Managing large volumes of tasks with accuracy and efficiency. Planning and scheduling to meet deadlines.</li>
+        <li>Communication - alternative dispute and conflict resolution, fostering conferences with clients, team members, outside counsel, and vendors.</li>
     <h1>EXPERIENCE</h1>
       <h2>Vial Fotheringham LLP</h2>
         <p>April 2012-Current</p>
@@ -17,3 +25,14 @@
               <li>Apperciating coworkers as a resource to help meet goals and delegating tasks to team members</li>
             </ul>
         <h2>Scholls Landscaping and Lawn Care LLC</h2>
+          <p>July 2010-April 2012</p>
+            <h3>Scholls, OR - General Landscraper</h3>
+              <ul>
+                <li>Landscape maintenance and horticulture.</li>
+                <li>Transport, care, and repair of tools and equipment in all weather.</li>
+              </ul>
+      <h1>EDUCATION</h1>
+        <h2>Associate Degree in General Studies<h2>
+          <p>September 2014</p>
+   </body>
+  
