--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         I had a preexisting love for working on computers. I remember building 386's from scavenged parts in my parent's garage as a kid, and I'm often fixing (sometimes further breaking) my friend's computers. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.
       </p>
       <p>
-        My work history has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, a file clerk, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path that can fulfill my desire for creativity.
+        My <a href="cv.html">work history</a> has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, a file clerk, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path that can fulfill my desire for creativity.
       </p>
     <h2>Hobbies</h2>
       <ul>
