--- a/index.html
+++ b/index.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <title>Nathan - (adjective: nerdy)</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>Nathan Romike | Nerd</title>
   </head>
   <body>
-    <h1>Hello, I'm Nathan</h1>
-      <img class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
-    <h5>-My wife Gloria and I, fishing on the Deschutes River-</h5>
-    <h2>My Background</h2>
-      <p>
-        My post-high school education has meandered a bit. I started at Portland Community College, transfer to Western Oregon University, deciding against a business degree, I came back to Portland and went to Portland State University. I had always wanted to be an architect and spent two years trying to fight my way through the program at PSU. Admitting defeat, I transferred to PCC and obtained a general Associates Degree.
-      </p>
-      <p>
-        Not knowing what to make of myself, I found Epicodus. A light bulb went off: <strong>coding</strong>.
-      </p>
-      <p>
-        I had a preexisting love for working on computers. I remember building 386's from scavenged parts in my parent's garage as a kid, and I'm often fixing (sometimes further breaking) my friend's computers. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.
-      </p>
-      <p>
-        My <a href="cv.html">work history</a> has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, a file clerk, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path that can fulfill my desire for creativity.
-      </p>
-    <h2>Hobbies</h2>
-      <ul>
-        <li>Relaxing with my wife, <a href="img\AbbJack.JPG">my dogs</a>, and my Netflix</li>
-        <li>Fishing, camping, and generally enjoying the great outdoors</li>
-        <li>Future addition: Computer programming</li>
-      </ul>
-    <h2>Top Websites</h2>
-      <ul class="links" style="list-style-type:none">
-        <li>
-          <a href="http://www.sbs.com.au/theboat/">
-            <h4>The Boat</h4>
-          </a>
-        </li>
-        <li>
-          <a href="http://thebuildfilm.com/">
-            <h4>The Build</h4>
-          </a>
-        </li>
-        <li>
-          <a href="http://www.homestarrunner.com/">
-            <h4>Homestar Runner</h4>
-         </a>
-        </li>
-      </ul>
+    <div class="container">
+      <h1>Hello, I'm Nathan</h1>
+        <img class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
+      <h5>-My wife Gloria and I, fishing on the Deschutes River-</h5>
+      <h2>My Background</h2>
+        <p>
+          My post-high school education has meandered a bit. I started at Portland Community College, transfer to Western Oregon University, deciding against a business degree, I came back to Portland and went to Portland State University. I had always wanted to be an architect and spent two years trying to fight my way through the program at PSU. Admitting defeat, I transferred to PCC and obtained a general Associates Degree.
+        </p>
+        <p>
+          Not knowing what to make of myself, I found Epicodus. A light bulb went off: <strong>coding</strong>.
+        </p>
+        <p>
+          I had a preexisting love for working on computers. I remember building 386's from scavenged parts in my parent's garage as a kid, and I'm often fixing (sometimes further breaking) my friend's computers. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.
+        </p>
+        <p>
+          My <a href="cv.html">work history</a> has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, a file clerk, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path that can fulfill my desire for creativity.
+        </p>
+      <h2>Hobbies</h2>
+        <ul>
+          <li>Relaxing with my wife, <a href="img\AbbJack.JPG">my dogs</a>, and my Netflix</li>
+          <li>Fishing, camping, and generally enjoying the great outdoors</li>
+          <li>Future addition: <span>Computer programming</span></li>
+        </ul>
+      <h2>Top Websites</h2>
+        <ol class="links" style="list-style-type:none">
+          <li>
+            <a href="http://www.sbs.com.au/theboat/">
+              <h4>The Boat</h4>
+            </a>
+          </li>
+          <li>
+            <a href="http://thebuildfilm.com/">
+              <h4>The Build</h4>
+            </a>
+          </li>
+          <li>
+            <a href="http://www.homestarrunner.com/">
+              <h4>Homestar Runner</h4>
+           </a>
+          </li>
+        </ol>
+      </div>
   </body>
