--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
       <h5>-My wife Gloria and I, fishing on the Deschutes River-</h5>
       <h2>My Background</h2>
         <p>
-          My post-high school education has meandered a bit. I started at Portland Community College, transfer to Western Oregon University, deciding against a business degree, I came back to Portland and went to Portland State University. I had always wanted to be an architect and spent two years trying to fight my way through the program at PSU. Admitting defeat, I transferred to PCC and obtained a general Associates Degree.
-        </p>
-        <p>
-          Not knowing what to make of myself, I found Epicodus. A light bulb went off: <strong>coding</strong>.
+          A light bulb went off: <strong>coding</strong>.
         </p>
         <p>
           I had a preexisting love for working on computers. I remember building 386's from scavenged parts in my parent's garage as a kid, and I'm often fixing (sometimes further breaking) my friend's computers. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.
-        </p>
-        <p>
-          My <a href="cv.html">work history</a> has similarly meandered. I've worked as a grocery checker, a mover, a landscaper, a file clerk, and spent the past few years as a legal assistant. I was drawn to coding as it can be applied to seemingly endless ventures. I'm excited to have found a career path that can fulfill my desire for creativity.
         </p>
       <h2>Hobbies</h2>
         <ul>
