--- a/index.html
+++ b/index.html
@@ -3,43 +3,26 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Nathan Romike | Nerd</title>
+    <title>Nathan | Romike</title>
   </head>
   <body>
     <div class="container">
       <h1>Hello, I'm Nathan</h1>
         <img class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
-      <h5>-My wife Gloria and I, fishing on the Deschutes River-</h5>
+      <h5>-Gloria and I, fishing on the Deschutes River-</h5>
       <h2>My Background</h2>
+        <p>
+          I had a preexisting love for working on computers. As a kid, I remember building 386's from scavenged parts in my parent's garage, and I'm often fixing (sometimes further breaking) my friend's computers.
+        </p>
         <p>
           A light bulb went off: <strong>coding</strong>.
         </p>
-        <p>
-          I had a preexisting love for working on computers. I remember building 386's from scavenged parts in my parent's garage as a kid, and I'm often fixing (sometimes further breaking) my friend's computers. With little prior experience in code, but a lot more thought and soul searching, I applied and can't wait to see where this path takes me.
-        </p>
+        <p>I can't wait to see where this path takes me. Please follow my projects on <a href="https://github.com/NathanRomike?tab=repositories">GitHub</a> and email me at nathanromike@gmail.com. Let's make awesome stuff!</p>
       <h2>Hobbies</h2>
         <ul>
           <li>Relaxing with my wife, <a href="img\AbbJack.JPG">my dogs</a>, and my Netflix</li>
           <li>Fishing, camping, and generally enjoying the great outdoors</li>
           <li>Future addition: <span>Computer programming</span></li>
         </ul>
-      <h2>Top Websites</h2>
-        <ol class="links" style="list-style-type:none">
-          <li>
-            <a href="http://www.sbs.com.au/theboat/">
-              <h4>The Boat</h4>
-            </a>
-          </li>
-          <li>
-            <a href="http://thebuildfilm.com/">
-              <h4>The Build</h4>
-            </a>
-          </li>
-          <li>
-            <a href="http://www.homestarrunner.com/">
-              <h4>Homestar Runner</h4>
-           </a>
-          </li>
-        </ol>
-      </div>
+    </div>
   </body>
