--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h5>-Gloria and I, fishing on the Deschutes River-</h5>
       <h2>My Background</h2>
         <p>
-          I had a preexisting love for working on computers. As a kid, I remember building 386's from scavenged parts in my parent's garage, and I'm often fixing (sometimes further breaking) my friend's computers.
+          I had a preexisting love for working on computers. As a kid, I remember building 386's from scavenged parts in our garage, and I'm often fixing (sometimes further breaking) my trusting friends' computers.
         </p>
         <p>
           A light bulb went off: <strong>coding</strong>.
