--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>
           A light bulb went off: <strong>coding</strong>.
         </p>
-        <p>I can't wait to see where this path takes me. Please follow my projects on <a href="https://github.com/NathanRomike?tab=repositories">GitHub</a> and email me at nathanromike@gmail.com. Let's make awesome stuff!</p>
+        <p>I can't wait to see where this path takes me. Please follow my projects on <a href="https://github.com/NathanRomike?tab=repositories">GitHub</a> and email me at <a href="mailto:nathanromike@gmail.com">nathanromike@gmail.com</a>. Let's make awesome stuff!</p>
       <h2>Hobbies</h2>
         <ul>
           <li>Relaxing with my wife, <a href="img\AbbJack.JPG">my dogs</a>, and my Netflix</li>
