Restyle layout, add project photos, refactor.

--- a/index.html
+++ b/index.html
@@ -6,23 +6,47 @@
     <title>Nathan | Romike</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Hello, I'm Nathan</h1>
-        <img class="centered" src="img\GloandI.JPG" alt="Photo of Gloria and I.">
-      <h5>-Gloria and I, fishing on the Deschutes River-</h5>
-      <h2>My Background</h2>
-        <p>
-          I had a preexisting love for working on computers. As a kid, I remember building 386's from scavenged parts in our garage, and I'm often fixing (sometimes further breaking) my trusting friends' computers.
-        </p>
-        <p>
-          A light bulb went off: <strong>coding</strong>.
-        </p>
-        <p>I can't wait to see where this path takes me. Please follow my projects on <a href="https://github.com/NathanRomike?tab=repositories">GitHub</a> and email me at <a href="mailto:nathanromike@gmail.com" target="_top">nathanromike@gmail.com</a>. Let's make awesome stuff!</p>
-      <h2>Hobbies</h2>
-        <ul>
-          <li>Relaxing with my wife, <a href="img\AbbJack.JPG">my dogs</a>, and my Netflix</li>
-          <li>Fishing, camping, and generally enjoying the great outdoors</li>
-          <li>Future addition: <span>Computer programming</span></li>
-        </ul>
+    <div>
+      <h1>I'm Nathan Romike</h1>
+      <h2>I love code!</h2>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://green-sky.firebaseapp.com/">
+            <img src="img\f-64.png" alt="Photo of f/64">
+          </a>
+        </div>
+        <div class="col-md-6d">
+          <a href="https://weekends.firebaseapp.com/">
+            <img src="img\weekend.png" alt="Photo of Weekend Planner">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <a href="https://play.google.com/store/apps/details?id=com.epicodus.shake_it_up">
+            <img src="img\Shake-it.png" alt="Photo of Shake It Up">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="https://github.com/NathanRomike/SnapMap">
+            <img src="img\snap.png" alt="Photo of Snap Map">
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 center">
+          <a href="https://github.com/NathanRomike/Survivalists">
+            <img src="img\walker.png" alt="Photo of Walker Treker">
+          </a>
+        </div>
+      </div>
     </div>
+    <footer>
+      <h3>Portland, OR</h3>
+      <a href="mailto:nathanromike@gmail.com" target="_top">Email</a>
+      <a href="https://github.com/NathanRomike">Github</a>
+      <a href="https://www.linkedin.com/in/nathanromike">LinkedIn</a>
+    </footer>
   </body>
