Resize imgs, align one center column.

--- a/index.html
+++ b/index.html
@@ -3,44 +3,38 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Nathan | Romike</title>
+    <title>Nathan|Romike</title>
   </head>
   <body>
     <div>
-      <h1>I'm Nathan Romike</h1>
-      <h2>I love code!</h2>
+      <h1>Nathan Romike</h1>
+      <h2>Creative Coder</h2>
       <br>
       <br>
-      <div class="row">
-        <div class="col-md-6">
-          <a href="https://green-sky.firebaseapp.com/">
-            <img src="img\f-64.png" alt="Photo of f/64">
-          </a>
-        </div>
-        <div class="col-md-6d">
-          <a href="https://weekends.firebaseapp.com/">
-            <img src="img\weekend.png" alt="Photo of Weekend Planner">
-          </a>
-        </div>
+      <div class="col-md-12">
+        <a href="https://green-sky.firebaseapp.com/">
+          <img src="img\f-64.png" alt="Photo of f/64">
+        </a>
       </div>
-      <div class="row">
-        <div class="col-md-6">
-          <a href="https://play.google.com/store/apps/details?id=com.epicodus.shake_it_up">
-            <img src="img\Shake-it.png" alt="Photo of Shake It Up">
-          </a>
-        </div>
-        <div class="col-md-6">
-          <a href="https://github.com/NathanRomike/SnapMap">
-            <img src="img\snap.png" alt="Photo of Snap Map">
-          </a>
-        </div>
+      <div class="col-md-12">
+        <a href="https://weekends.firebaseapp.com/">
+          <img src="img\weekend.png" alt="Photo of Weekend Planner">
+        </a>
       </div>
-      <div class="row">
-        <div class="col-md-12 center">
-          <a href="https://github.com/NathanRomike/Survivalists">
-            <img src="img\walker.png" alt="Photo of Walker Treker">
-          </a>
-        </div>
+      <div class="col-md-12">
+        <a href="https://play.google.com/store/apps/details?id=com.epicodus.shake_it_up">
+          <img src="img\Shake-it.png" alt="Photo of Shake It Up">
+        </a>
+      </div>
+      <div class="col-md-12">
+        <a href="https://github.com/NathanRomike/SnapMap">
+          <img src="img\snap.png" alt="Photo of Snap Map">
+        </a>
+      </div>
+      <div class="col-md-12 padding">
+        <a href="https://github.com/NathanRomike/Survivalists">
+          <img src="img\walker.png" alt="Photo of Walker Treker">
+        </a>
       </div>
     </div>
     <footer>
