Remove hover decoration, resize img.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   </head>
   <body>
     <div>
-      <h1>Nathan Romike</h1>
-      <h2>Creative Coder</h2>
-      <br>
-      <br>
+      <header>
+        <br>
+        <h1>Nathan Romike</h1>
+        <h2>Creative Coder</h2>
+        <h3>Portland, OR</h3>
+        <a href="mailto:nathanromike@gmail.com" target="_top">Email</a>
+        <a href="https://github.com/NathanRomike">Github</a>
+        <a href="https://www.linkedin.com/in/nathanromike">LinkedIn</a>
+        <br>
+        <br>
+      </header>
       <div class="col-md-12">
         <a href="https://green-sky.firebaseapp.com/">
           <img src="img\f-64.png" alt="Photo of f/64">
