Replace text with icons.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
       <header>
         <br>
         <h1>Nathan Romike</h1>
-        <h2>Creative Coder</h2>
+        <h2>{Creative Coder}</h2>
         <h3>Portland, OR</h3>
-        <a href="mailto:nathanromike@gmail.com" target="_top">Email</a>
-        <a href="https://github.com/NathanRomike">Github</a>
-        <a href="https://www.linkedin.com/in/nathanromike">LinkedIn</a>
+        <a class="icon" href="https://github.com/NathanRomike">
+          <img src="img/icons/github.png"></img>
+        </a>
+        <a class="icon" href="mailto:nathanromike@gmail.com" target="_top">
+          <img src="img/icons/email.png"></img>
+        </a>
+        <a class="icon" href="https://www.linkedin.com/in/nathanromike">
+          <img src="img/icons/linkedin.png"></img>
+        </a>
         <br>
         <br>
       </header>
@@ -44,10 +50,4 @@
         </a>
       </div>
     </div>
-    <footer>
-      <h3>Portland, OR</h3>
-      <a href="mailto:nathanromike@gmail.com" target="_top">Email</a>
-      <a href="https://github.com/NathanRomike">Github</a>
-      <a href="https://www.linkedin.com/in/nathanromike">LinkedIn</a>
-    </footer>
   </body>
