--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width">
+    <script src="https://use.fontawesome.com/2e3856364f.js"></script>
     <title>Nathan|Romike</title>
   </head>
   <body>
@@ -20,12 +22,12 @@
         </a>
       </header>
       <div class="carouselbox">
-        <div class="buttons">
-          <button class="prev"><<span class="offscreen">Previous</span>
-          </button>
-          <button class="next"><span class="offscreen">Next</span>>
-          </button>
-        </div>
+        <button class="prev">
+          <i class="fa fa-chevron-left" aria-hidden="true"></i>
+        </button>
+        <button class="next">
+          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        </button>
         <ol class="content">
           <li>
             <a href="https://green-sky.firebaseapp.com/">
