Add targets to all a links.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>Nathan Romike</h1>
         <h2>{Creative Coder}</h2>
         <h3>Portland, OR</h3>
-        <a class="icon" href="mailto:nathanromike@gmail.com">
+        <a class="icon" target="_blank" href="mailto:nathanromike@gmail.com">
           <img src="img/icons/email.png"></img>
         </a>
-        <a class="icon" href="https://www.linkedin.com/in/nathanromike">
+        <a class="icon" target="_blank" href="https://www.linkedin.com/in/nathanromike">
           <img src="img/icons/linkedin.png"></img>
         </a>
-        <a class="icon" href="https://github.com/NathanRomike">
+        <a class="icon" target="_blank" href="https://github.com/NathanRomike">
           <img src="img/icons/github.png"></img>
         </a>
       </header>
@@ -30,27 +30,27 @@
         </button>
         <ol class="content">
           <li>
-            <a href="https://green-sky.firebaseapp.com/">
+            <a target="_blank" href="https://green-sky.firebaseapp.com/">
               <img src="img\f-64.png" alt="Photo of f/64">
             </a>
           </li>
           <li>
-            <a href="https://weekends.firebaseapp.com/">
+            <a target="_blank" href="https://weekends.firebaseapp.com/">
               <img src="img\weekend.png" alt="Photo of Weekend Planner">
             </a>
           </li>
           <li>
-            <a href="https://play.google.com/store/apps/details?id=com.epicodus.shake_it_up">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.epicodus.shake_it_up">
               <img src="img\Shake-it.png" alt="Photo of Shake It Up">
             </a>
           </li>
           <li>
-            <a href="https://github.com/NathanRomike/SnapMap">
+            <a target="_blank" href="https://github.com/NathanRomike/SnapMap">
               <img src="img\snap.png" alt="Photo of Snap Map">
             </a>
           </li>
           <li>
-            <a href="https://github.com/NathanRomike/Survivalists">
+            <a target="_blank" href="https://github.com/NathanRomike/Survivalists">
               <img src="img\walker.png" alt="Photo of Walker Treker">
             </a>
           </li>
