--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   <body>
       <header>
         <h1>Nathan Romike</h1>
-        <h2>{Creative Coder}</h2>
-        <h3>Portland, OR</h3>
-        <a class="icon" target="_blank" href="mailto:nathanromike@gmail.com">
-          <img src="img/icons/email.png"></img>
-        </a>
+        <h2>{<span>Creative Coder</span>}</h2>
         <a class="icon" target="_blank" href="https://www.linkedin.com/in/nathanromike">
-          <img src="img/icons/linkedin.png"></img>
+          <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+        </a>
+        <a class="icon" target="_blank" href="mailto:nathanromike@gmail.com">
+          <i class="fa fa-envelope" aria-hidden="true"></i>
         </a>
         <a class="icon" target="_blank" href="https://github.com/NathanRomike">
-          <img src="img/icons/github.png"></img>
+          <i class="fa fa-github-square" aria-hidden="true"></i>
         </a>
       </header>
       <div class="carouselbox">
