--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width">
     <script src="https://use.fontawesome.com/2e3856364f.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="img/favicon.png" />
     <title>Nathan|Romike</title>
   </head>
