--- a/index.html
+++ b/index.html
@@ -57,5 +57,8 @@
           </li>
         </ol>
       </div>
+      <footer>
+        <h5>Made in Portland, Oregon</h5>
+      </footer>
   </body>
   <script src="js/scripts.js"></script>
