--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="img/favicon.png" rel="icon" type="image/png"/>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width">
     <script src="https://use.fontawesome.com/2e3856364f.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" href="img/favicon.png" />
     <title>Nathan|Romike</title>
   </head>
   <body>
@@ -41,6 +41,16 @@
             </a>
           </li>
           <li>
+            <a target="_blank" href="https://github.com/NathanRomike/YesYouCan">
+              <img src="img\you-can.png" alt="Photo of Yes you can!">
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="https://github.com/NathanRomike/Survivalists">
+              <img src="img\walker.png" alt="Photo of Walker Treker">
+            </a>
+          </li>
+          <li>
             <a target="_blank" href="https://play.google.com/store/apps/details?id=com.epicodus.shake_it_up">
               <img src="img\Shake-it.png" alt="Photo of Shake It Up">
             </a>
@@ -48,11 +58,6 @@
           <li>
             <a target="_blank" href="https://github.com/NathanRomike/SnapMap">
               <img src="img\snap.png" alt="Photo of Snap Map">
-            </a>
-          </li>
-          <li>
-            <a target="_blank" href="https://github.com/NathanRomike/Survivalists">
-              <img src="img\walker.png" alt="Photo of Walker Treker">
             </a>
           </li>
         </ol>
