--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en" xmlns= "http://www.w3.org/1999/xhtml>
   <head>
+    <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
+    <meta name="google" content="notranslate">
+    <meta http-equiv="Content-Language" content="en">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="img/favicon.png" rel="icon" type="image/png"/>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <meta name="viewport" content="width=device-width">
-    <script src="https://use.fontawesome.com/2e3856364f.js"></script>
     <title>Nathan|Romike</title>
+    <script src="https://use.fontawesome.com/2e3856364f.js"></script>
   </head>
   <body>
       <header>
